--- a/Olist Ecommerce Project - Delivery Analysis & Optimization with ML.ipynb
+++ b/Olist Ecommerce Project - Delivery Analysis & Optimization with ML.ipynb
@@ -16,7 +16,7 @@
         "id": "dV6JG2KX5BTI"
       },
       "source": [
-        "#** 🛒 🛍 How Can OLIST Marketplace Improve Delivery Estimation To Enhance Customers' Satisfaction  🛍 🛒 ** \n",
+        "#** 🛒 🛍 How OLIST Marketplace Can Improve Delivery Estimation To Enhance Customers' Satisfaction ?  🛍 🛒 ** \n",
         "\n",
         "***👨🏼‍💻 Prepared by Duy Nghi & Karen, January 2021***\n",
         "\n",
@@ -19933,12 +19933,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 155
         },
         "id": "PDX1SokSLxtA",
         "outputId": "24cdcf5d-bef1-4e90-c3bc-baf6d82b68f7"
       },
-      "execution_count": null,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "display_data",
@@ -19964,7 +19964,12 @@
           "text": [
             "Mean Absolute Error: 3.9837646709929846\n",
             "Mean Squared Error: 31.581336494937158\n",
-            "Root Mean Squared Error: 5.619727439559427\n"
+            "Root Mean Squared Error: 5.619727439559427\n",
+            "training set score: 0.366730\n",
+            "test set score: 0.368824\n",
+            "number of features used: 24\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -19992,10 +19997,34 @@
         "y_full = lg.predict(X_final)"
       ],
       "metadata": {
-        "id": "OYYswKt4QM6k"
+        "id": "OYYswKt4QM6k",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "118e5282-bc6f-4e9f-c80a-2ad1ba6cc7af"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 193,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <style>\n",
+              "    pre {\n",
+              "        white-space: pre-wrap;\n",
+              "    }\n",
+              "  </style>\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -20003,10 +20032,34 @@
         "y_predict = y_full.flatten() "
       ],
       "metadata": {
-        "id": "yCMPisJHRLEI"
+        "id": "yCMPisJHRLEI",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "a61aa61f-0879-4d82-ff7a-8b11b440952e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <style>\n",
+              "    pre {\n",
+              "        white-space: pre-wrap;\n",
+              "    }\n",
+              "  </style>\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -20015,10 +20068,45 @@
         "y_actual"
       ],
       "metadata": {
-        "id": "5TFmcuP3RMLs"
+        "id": "5TFmcuP3RMLs",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "a7a33ced-752f-4201-dcb2-8c549a517ae7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 195,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <style>\n",
+              "    pre {\n",
+              "        white-space: pre-wrap;\n",
+              "    }\n",
+              "  </style>\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 7.58209491, 16.2077662 ,  7.93803241, ...,  3.7971875 ,\n",
+              "        1.91328704,  5.03209491])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 195
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -20026,10 +20114,45 @@
         "y_predict"
       ],
       "metadata": {
-        "id": "w-7_a5OTSmpU"
+        "id": "w-7_a5OTSmpU",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "46661677-6f4c-43af-90c2-5ee098f6e4fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 196,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <style>\n",
+              "    pre {\n",
+              "        white-space: pre-wrap;\n",
+              "    }\n",
+              "  </style>\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 8.84032241, 12.31385348,  8.00061326, ...,  8.28888858,\n",
+              "        4.23617775,  6.80447188])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 196
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -20038,10 +20161,34 @@
         "coompare_dataset = pd.DataFrame({'actual': y_actual, 'estimate': list(y_predict)}, columns=['actual', 'estimate'])"
       ],
       "metadata": {
-        "id": "vtFkaDhfRN0i"
+        "id": "vtFkaDhfRN0i",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "848cb2b5-247e-4f4a-bd52-33dce945e3e9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 197,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <style>\n",
+              "    pre {\n",
+              "        white-space: pre-wrap;\n",
+              "    }\n",
+              "  </style>\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -20049,10 +20196,34 @@
         "coompare_dataset.to_csv('/content/gdrive/MyDrive/Olist/compare_dataset.csv')"
       ],
       "metadata": {
-        "id": "aBnC5iA9TpOx"
+        "id": "aBnC5iA9TpOx",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "f32f035a-ed33-4440-d93b-8996ee50b567"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 198,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <style>\n",
+              "    pre {\n",
+              "        white-space: pre-wrap;\n",
+              "    }\n",
+              "  </style>\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -20112,7 +20283,7 @@
       "name": "Final project_ E-Commerce Olist",
       "provenance": [],
       "mount_file_id": "1lPDWjr9hlK7F6W6jj5TYeTPMnalCDLva",
-      "authorship_tag": "ABX9TyMwkqvIlicStUIm4bj7q3vR",
+      "authorship_tag": "ABX9TyN4dAsnfSUO3pp4lxLPtn3Z",
       "include_colab_link": true
     },
     "kernelspec": {
